2004-02-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Makefile.am: add empty install-exec-local target if not on Mac OS X
	* configure.ac: add extra X11 include directory on freebsd
	* Makefile.am: distribute autogen.sh

2004-02-03 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/exult_studio.xml: converted JPGs to PNGs
	* docs/exult_studio.html: converted JPGs to PNGs
	* docs/images/*.jpg removed, *.png added instead
	* docs/xml/faq.xml: eliminated another jpg
	* docs/faq.html, readme.html: updated
	* ReadMe, FAQ: updated

2004-02-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/Gump_manager.cc: don't disable unicode if any modal gumps left

2004-01-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* audio/Audio.cc: prevent crash when loading an invalid wave file
	* docs/xml/docs.xml: updated a bit

2004-01-30  Ryan Nunn  <colourles@users.sourceforge.net>
	* Various files : Updating version to 1.1.10cvs. That's one point one
	  point ten see vee ess. 
	* audio/Audio.cc : Fixing up resampling bias problem. Fixing up what 
	  was actually causing the high pitch voices for Windows users. Using
	  = instead of == is never good.

2004-01-27 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/docs.xml,faq.xml: updated
	* docs/ReadMe.html, Faq.html: updated
	* FAQ, ReadMe: updated
	* README.MacOSX: added compile instructions as discussed ages ago on the forum

2004-01-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: update version to 1.1.9rc1, adjust copyright dates
	* configure.ac: remove --enable-usecode-debugger configure option

2004-01-19  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/egg.cc: never set hatched on the Serpent Staff egg (bug#879253)

2004-01-19  Ryan Nunn  <colourles@users.sourceforge.net>
	* actors.h : Added get_sexed_coloured_shape() for fixing paperdolls and 