@@ -1,3 +1,6 @@
+2004-02-06  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* cheat.cc: move dead bodies to avatar before resurrecting them
+
 2004-02-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* Makefile.am: add empty install-exec-local target if not on Mac OS X
 	* configure.ac: add extra X11 include directory on freebsd
